fixed spacing on socials icons

--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,19 @@ img.socials:hover {
   transition: transform 0.3s ease;
 }
 
+.socials-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   max-height: 80px;
   overflow: hidden;
   transition: max-height 0.6s ease-in-out;
-  gap: 12px;
+  gap: 10px;
   -webkit-transition: max-height 0.6s ease-in-out;
   -moz-transition: max-height 0.6s ease-in-out;
   -ms-transition: max-height 0.6s ease-in-out;
